# booking-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
data/: booking_policies.txt  booking_policies_alleged.txt  calendar.json  calendar_og.json
data/policy_index/: index.faiss  index.pkl
scripts/: create_db.py  launch_interface.py
src/booking_agent/: booking_agent.py  booking_tools.py  calendar.py  calendar_toolkit.py  exceptions.py  memory_tools_agent.py
tests/: test_calendar.py
